apps/base/unifi/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
spec:
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-network-application:8.2.93-ls49 # {"imagepolicy": "apps:unifi"}
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: fast-nfs
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: fast-nfs
          persistentVolumeClaim:
            claimName: unifi
