apps/base/unifi/app/service-udp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-udp
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: 'true'
spec:
  ports:
    - port: 3478
      targetPort: 3478
      name: stun
      protocol: UDP
    - port: 10001
      targetPort: 10001
      name: discovery
      protocol: UDP
    - port: 1900
      targetPort: 1900
      name: l2discoverable
      protocol: UDP
  selector:
    app: unifi
  type: LoadBalancer
