apps/base/unifi/app/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi 
spec:
  parentRefs:
    - name: traefik
      namespace: infrastructure 
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: unifi
          port: 8443
